# PyFleet-Scratch

./: .gitignore  README.md  WINDOWS.md  bot.py  cli.py  install.sh  preferences.json  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  build.yml
PyFleetScratch/executables/pyfleetscratch.build/: @link_input.txt  __constants.c  __constants.const  __constants.h  __constants.txt  __loader.c  module.__main__.c  module.__main__.const  module.ban_check.c  module.ban_check.const  module.bot.c  module.bot.const  module.cli.c  module.cli.const  module.control_bots.c  module.control_bots.const  module.manual_bot.c  module.manual_bot.const  scons-debug.py  scons-debug.sh  scons-report.txt
PyFleetScratch/executables/pyfleetscratch.build/static_src/: CompiledFunctionType.c  MainProgram.c
PyFleetScratch/executables/pyfleetscratch.dist/: libcrypto.3.dylib  libncurses.6.dylib
Windows/: cli.py  preferences.json
macOS/: bot.py
src/: ban_check.py  bot.py  cli.py  control_bots.py  manual_bot.py  pyfleetscratch.py
