[project]
name = "pyfleetscratch"
version = "0.4.2"
description = "CLI for botting scratch"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.36.0",
    "pyfiglet>=1.0.4",
    "rich>=14.2.0",
    "scratchattach>=2.1.13",
    "transformers>=4.57.3",
    "numpy<2",
    "torch==2.2.2",
    "torchvision",
]
